cleanup: Claude workflow write permissions + overview.md post-Phase-4B-Step-2 refresh (#19)
* fix(ci): grant write permissions to Claude workflows so review comments and @claude mentions actually work

Both workflow files were running with `pull-requests: read` (and the
@claude-mention workflow with `contents: read` / `issues: read` too).
The GitHub Actions accept the trigger and the action runs, but every
mutation call from inside the action — posting a review comment, pushing
a commit, updating a PR description, replying on an issue — gets 403
from the GitHub API. Net effect: the workflow appears green but produces
no visible response on the PR or issue.

Aligned with the canonical examples in the claude-code-action repo:

  - claude-code-review.yml gets `pull-requests: write`
    (per pr-review-comprehensive.yml). `contents` and `issues` stay read
    or absent — the review action does not push commits and PR review
    comments do not require issues:write.

  - claude.yml gets `contents: write` / `pull-requests: write` /
    `issues: write` (per claude.yml example). @claude can be asked to
    push commits, update PR description, or close issues, all of which
    need write.

Both files now carry an inline comment pointing at the canonical example
so future contributors see why the broader-than-strictly-necessary
permissions are in place — same shape upstream uses.

* docs: refresh architecture/overview.md status header to post-Phase-4B-Step-2 reality

The overview page header had drifted across multiple phase closures:

  - Status was still "Phase 0 — Architecture Spike" — Phase 0/1/2/3/4A
    and Phase 4B-Step-1/Step-2 have all closed since.
  - Kernel target still pointed at `exeris-kernel 0.5.0-SNAPSHOT
    (TRL-3, Java 26)` while the actual `exeris.kernel.version` in pom
    is 0.6.0, and the build now requires `--enable-preview`.
  - Version line was already bumped to 0.5.0-SNAPSHOT in PR #18 but
    didn't yet contextualize the release-train target.

Repl